# IPL-Winner-Prediction-2026

./: .gitattributes  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  orchestrator.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: ci.yml
config/: base.yaml  data.yaml  model.yaml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: AnalyticsTab.tsx  FeatureRadar.tsx  HeroChampion.tsx  IntelligenceTab.tsx  MatchForecast.tsx  (+6 more)
data/: priors_2026.json  rosters_2026.json
notebooks/: IPL_2026_Prediction_Analysis.ipynb
scripts/: build_rosters_2026.py  download_logos.py  fetch_cricsheet_ipl.py  generate_sample_data.py  rebuild_all.py  rebuild_from_cricsheet.py  update_in_season.py
src/api/: routes.py  schemas.py  service.py
src/data/: create_dataset.py  db_setup.py  db_utils.py  export_stats.py  ingest.py  live_data.py  preprocess.py
src/features/: engineer.py  in_season_form.py  player_form.py  store.py  team_strength.py  venue_features.py
src/models/: base_model.py  cross_validator.py  ensemble_model.py  extra_trees_model.py  lightgbm_model.py  neural_network_model.py  random_forest_model.py  shap_explainer.py  trainer.py  tune.py  xgboost_model.py
src/prediction/: explainability.py  match_predictor.py  playoff_simulator.py  predict_2026.py  visualize.py
tests/: conftest.py  test_base_model.py  test_config.py  test_engineer.py  test_ensemble_cv.py  test_priors.py  test_server.py
(+3 files in other folders)
