[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipl-winner-prediction"
version = "0.1.0"
description = "IPL 2026 winner prediction ensemble with FastAPI dashboard backend."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "numpy==2.2.6",
    "pandas==2.2.2",
    "scikit-learn==1.7.2",
    "xgboost==3.2.0",
    "lightgbm==4.6.0",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "joblib==1.5.3",
    "shap==0.49.1",
    "optuna==4.8.0",
    "fastapi==0.135.3",
    "uvicorn==0.42.0",
    "tqdm==4.67.3",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.setuptools]
py-modules = ["config", "main", "server"]

[tool.setuptools.packages.find]
include = ["src*"]
exclude = ["tests*", "notebooks*", "dashboard*", "data*", "outputs*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line too long (formatter handles)
    "E402",  # module-level imports not at top (legacy files)
]
